--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
 
     <link rel="stylesheet" href="style.css" />
-    <title>Octoedge Course Page</title>
+    <title>Octoedge Page</title>
   </head>
   <body>
     <section>
