--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <a href="#">Learn More</a>
         </div>
         <div class="imgbox">
-          <img src="assets/HTML5_Logo_512.png" class="starbucks">
+          <img src="assets/HTML5_Logo_512.png" class="octoedge">
         </div>
       </div>
       <ul class="thumb">
@@ -52,7 +52,7 @@
     </section>
     <script type="text/javascript">
       function imageSlider(source){
-        document.querySelector('.starbucks').src = source;
+        document.querySelector('.octoedge').src = source;
       }
       function changeCircleColor(color){
         const circle = document.querySelector('.circle');
